--- a/main/templates/about.html
+++ b/main/templates/about.html
@@ -48,6 +48,12 @@
             detailed insights into various animal species through a seamless and
             user-friendly web application.
           </p>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="content">
+        <div class="description">
           <p>
             <strong>Key Features:</strong>
           </p>
@@ -69,6 +75,12 @@
                 Our web application, developed with FastAPI, provides an intuitive experience, allowing easy image uploads and instant feedback.
             </li>
           </ul>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="content">
+        <div class="description">
           <p>
             <strong>Our Mission:</strong> At BeastlyVisionX, we aim to bridge the gap between technology and nature, offering a powerful tool for animal enthusiasts, researchers, and educators. By leveraging machine learning and data analytics, we strive to turn complex data into actionable insights, promoting a deeper understanding of the animal kingdom.
           </p>
