--- a/main/templates/features.html
+++ b/main/templates/features.html
@@ -67,6 +67,10 @@
             </li>
           </ul>
         </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="content">
         <div class="description">
           <h2>What the Model Does</h2>
           <ul>
@@ -84,6 +88,10 @@
             </li>
           </ul>
         </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="content">
         <div class="description">
           <h2>Technical Specifications</h2>
           <p>
